--- a/css/shop.css
+++ b/css/shop.css
@@ -27,8 +27,28 @@
         flex-wrap: wrap;
       }
 
-      
-      
+      .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    
+    .dropdown-toggle {
+        cursor: pointer;
+    }
+    
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #afafaf;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        top: 100%;
+        left: 0;
+    }
+    
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
       .list--item {
         width:25%;
         float:left;
@@ -125,6 +145,7 @@
       .imagelogo{
             width: 4.3em;
             height: 2em;
+            margin-right: 50px;
       }
       
       .navigation .nav-items a{
