--- a/css/html.css
+++ b/css/html.css
@@ -13,9 +13,13 @@
       }
       
       header{
-          z-index: 999;
-          position: fixed;
-          width: 100%;
+        z-index: 999;
+        width: 100%;
+        position: static;
+        top: auto;
+        bottom: auto;
+        margin: 0;
+        padding: 0;     
       }
       
       header .nav-bar{
@@ -72,7 +76,6 @@
       .home{
           position: relative;
           min-height: 100vh;
-         /* background: url(https://media.discordapp.net/attachments/835547247860645939/1157647696631451728/logosomethingidk.jpg) no-repeat;*/
           background-size: cover;
           background-position: center;
           display: flex;
@@ -80,14 +83,7 @@
           align-items: center;
       }
 
-      .homeshop {
-      
-        position: relative;
-        min-height: 100vh;
-        display: flex;
-        justify-content: center;
-          align-items: center;
-      }
+    
       
       .home:before{
           z-index: 888;
@@ -95,7 +91,6 @@
           position: absolute;
           width: 100%;
           height: 50px;
-          background: linear-gradient(transparent, #000116);
           bottom: 0;
           left: 0;
       }
@@ -456,3 +451,40 @@
           display: none !important;
         }
       }
+
+      .slideshow {
+        width: 100%;
+  height: 500px;
+  margin: 0 auto;
+      }
+      
+      .slideshow img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: none;
+      }
+      
+      .slideshow img:first-child {
+        display: block;
+      }
+      
+      .slideshow a {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        color: rgb(212, 212, 212);
+        font-size: 20px;
+      }
+      
+      .prev {
+        left: 18px;
+      }
+      
+      .next {
+        right: 18px;
+      } 
+    
