--- a/css/html.css
+++ b/css/html.css
@@ -454,8 +454,8 @@
 
       .slideshow {
         width: 100%;
-  height: 500px;
-  margin: 0 auto;
+        height: 500px;
+        margin: 0 auto;
       }
       
       .slideshow img {
@@ -464,7 +464,18 @@
         left: 0;
         width: 100%;
         height: 100%;
-        display: none;
+        display: block;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+      }
+      .slideshow img.active {
+        opacity: 1;
+        transition: opacity 0.5s ease-in-out;
+      }
+      
+      .slideshow img.inactive {
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
       }
       
       .slideshow img:first-child {
@@ -480,11 +491,4 @@
         font-size: 20px;
       }
       
-      .prev {
-        left: 18px;
-      }
-      
-      .next {
-        right: 18px;
-      } 
-    
+   
