--- a/css/login.css
+++ b/css/login.css
@@ -20,7 +20,7 @@ body{
 header{
   z-index: 999;
   width: 100%;
-  position: static;
+  position: fixed;
   top: auto;
   bottom: auto;
   margin: 0;
