--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -30,7 +30,7 @@
   
   <footer class="footer">
     <div class="footer__addr">
-      <h1 class="footer__logo">STI College </h1>
+      <h1 class="footer__logo">Shop To Immediate  </h1>
           
       <h2>Contact</h2>
       
@@ -85,10 +85,9 @@
     </ul>
     
     <div class="legal">
-      <p>&copy; ©2022 STI Education Services Group, Inc. All rights reserved</p>
+      <p>&copy;2023 STI Education Services Group, Inc. All rights reserved</p>
       
       <div class="legal__links">
-        <span>Made with <span class="heart">❤️</span> from group 3</span>
       </div>
     </div>
   </footer>
