--- a/views/pages/shop.ejs
+++ b/views/pages/shop.ejs
@@ -10,7 +10,8 @@
   <header>
     <div class="nav-bar">   
         <img  src="img/logo2.png"  alt="Sti" class="imagelogo" >
-
+        <div class="logo">Shop to Immediate</div>
+<!-- 
         <div class="nav-sort">
           <div class="navS-items">
               <div class="dropdown">
@@ -43,18 +44,17 @@
                       <a href="#">Necktie<br></a>
                       <a href="#">I.D Lace<br></a>
                       <a href="#">Pins<br></a>
-
                   </ul>
               </div>
           </div>
-      </div>
+      </div> -->
       
       <div class="navigation">
         <div class="nav-items">
           <a href="#" class="cart-link" onclick="openCartPopup()">
             <i class="fas fa-shopping-cart"></i> CART (0)
           </a>
-          <a href="/">Back</a>
+          <a href="/">Home</a>
           <a href="/login">Login</a>
         </div>
       </div>
@@ -65,7 +65,6 @@
 
       <section class="home">
         <div class="sidebar">
-          <div class="logo">Shop to Immediate</div>
           <input type="text" id="txtSearch" placeholder="Search Product..." />
           <h3>Category</h3>
           <ul class="category-list"></ul>
@@ -87,7 +86,7 @@
 
  <footer class="footer">
   <div class="footer__addr">
-    <h1 class="footer__logo">STI College </h1>
+    <h1 class="footer__logo">Shop To Immediate </h1>
         
     <h2>Contact</h2>
     
@@ -142,11 +141,7 @@
   </ul>
   
   <div class="legal">
-    <p>&copy; ©2022 STI Education Services Group, Inc. All rights reserved</p>
-    
-    <div class="legal__links">
-      <span>Made with <span class="heart">❤️</span> from group 3</span>
-    </div>
+    <p>&copy;2023 Shop To Immediate, Inc. All rights reserved</p>
   </div>
 </footer>
       <script type="text/javascript" src="scripts/index.js"></script>
