--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -14,7 +14,6 @@
         <div class="navigation">
           <div class="nav-items">
             <a href="/shop">Shop now</a>
-            <a href="/login">Login</a>
           </div>
       </div>
     </div>
@@ -53,7 +52,7 @@
 
       <footer class="footer">
         <div class="footer__addr">
-          <h1 class="footer__logo">STI College </h1>
+          <h1 class="footer__logo">Shop To Immediate</h1>
               
           <h2>Contact</h2>
           
@@ -108,11 +107,8 @@
         </ul>
         
         <div class="legal">
-          <p>&copy; ©2022 STI Education Services Group, Inc. All rights reserved</p>
+          <p>&copy;2023 STI Education Services Group, Inc. All rights reserved</p>
           
-          <div class="legal__links">
-            <span>Made with <span class="heart">❤️</span> from group 3</span>
-          </div>
         </div>
       </footer>
             <script type="text/javascript" src="scripts/index.js"></script>
