--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -53,7 +53,7 @@
 
       <footer class="footer">
         <div class="footer__addr">
-          <h1 class="footer__logo">STI College </h1>
+          <h1 class="footer__logo">Shop To Immediate </h1>
               
           <h2>Contact</h2>
           
@@ -108,11 +108,8 @@
         </ul>
         
         <div class="legal">
-          <p>&copy; ©2022 STI Education Services Group, Inc. All rights reserved</p>
-          
-          <div class="legal__links">
-            <span>Made with <span class="heart">❤️</span> from group 3</span>
-          </div>
+          <p>&copy; ©2023 Shop To Immediate, Inc. All rights reserved</p>
+
         </div>
       </footer>
             <script type="text/javascript" src="scripts/index.js"></script>
